src/client/style.css
/* ... */
span.material-symbols-outlined {
    vertical-align: bottom;
    align-self: center;
}
h1 > span.material-symbols-outlined {
    font-size: 1em;
    font-variation-settings: 'FILL' 0,
        'wght' 300,
        'GRAD' 100,
        'opsz' 48;
}

hr {
    margin: 1ex 0;
    border: none;
    border-bottom: 1px solid var(--background-titlebar);
    grid-column: 1 / -1;
}

dialog {
    background-color: var(--background-tertiary);
    color: var(--text-normal);
    border: 2px solid var(--background-titlebar);
    box-shadow: 0 0 1em 0.5em var(--background-titlebar);
}
dialog::backdrop {
    backdrop-filter: blur(2px);
}
dialog > form {
    display: flex;
    flex-direction: column;
    gap: 1ex;
}
dialog > form > div.buttons {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 1ex;
}
dialog > form > div.buttons > button {
    padding: 1ex;
}
div.dialogtitlebar {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-flow: column;
    grid-auto-columns: auto;
    gap: 1ex;
    align-items: end;
}
div.dialogtitlebar > span.titletext {
    font-size: 1.5em;
}
div.dialogtitlebar > button {
    padding: 0.5ex;
}

.betterscroll::-webkit-scrollbar {
    width: 1.5ex;
}

.betterscroll::-webkit-scrollbar-track {
    background: var(--scrollbar-track-color);
    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
}

.betterscroll::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb-color);
    /* outline: 1px solid slategrey; */
}

dynamic-f64-input > label {
    display: contents;
}
dynamic-f64-input div.vinput {
    display: grid;
    position: relative;
}
dynamic-f64-input div.menulist.autocomplete {
    z-index: 50;
    position: absolute;
    box-sizing: border-box;
    min-width: 100%;
    top: 100%;
    outline: 2px solid var(--background-tertiary);
    border-color: var(--background-tertiary);
    border-style: solid;
    border-width: 0px 0.2ex 0.2ex;
    visibility: hidden;
}
dynamic-f64-input:focus-within div.menulist.autocomplete {
    visibility: visible;
}
dynamic-f64-input div.menulist.autocomplete button.df64autocompletion.autoaction {
    background-color: var(--background-interactive-active);
}
dynamic-f64-input div.menulist.autocomplete button.df64autocompletion {
    grid-template-columns: 1fr auto;
}
dynamic-f64-input div.menulist.autocomplete button.df64autocompletion span.value {
    justify-self: start;
    font-weight: bold;
}
dynamic-f64-input div.menulist.autocomplete button.df64autocompletion span.type {
    color: var(--text-low-priority);
    font-family: monospace;
}

div.labelinputgrid {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 0.5ex 1ex;
    align-items: center;
}
div.labelinputgrid > label, div.labelinputgrid > dynamic-f64-input, div.labelinputgrid > div.optionalinput {
    display: contents;
}
div.labelinputgrid > * > .labeltext {
    justify-self: end;
}
div.labelinputgrid > div.optionalinput > div.inputs {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 0.5ex;
    align-items: center;
}
.labeltext > span.material-symbols-outlined {
    margin-right: 0.5ex;
}

.material-symbols-outlined.infoicon {
    font-size: 0.8em;
    vertical-align: initial;
    color: var(--text-low-priority);
}

span.unit {
    font-family: monospace;
    /* font-size: 1.1em; */
}

.errortext {
    color: #f97070;
}


*:disabled {
    cursor: not-allowed;
}

select, option, input, button {
    background-color: var(--background-interactive);
    color: var(--text-normal);
}
select:hover, option:hover, input:hover, button:hover {
    background-color: var(--background-interactive-hover);
    color: var(--text-normal);
}
option:active, input[type="checkbox"]:active, button:active {
    background-color: var(--background-interactive-active);
    color: var(--text-normal);
}
select:disabled, option:disabled, input:disabled, button:disabled {
    background-color: var(--background-interactive-disabled);
    color: var(--text-low-priority);
}
input::placeholder {
    color: var(--text-low-priority);
}
select:focus, option:focus, input:focus, button:focus {
    outline: none;
    box-shadow: 0 0 0 2px var(--focus-ring);
}

select, option, input {
    padding: 1ex;
    border: none;
    min-width: 4ex;
}

a {
    color: var(--text-link);
    text-decoration: none;
}
button {
    font-size: 1em;
    padding: 0.25ex 1ex;
    border: none;
    cursor: pointer;
    /* text-transform: uppercase; */
    /* border-radius: 1px; */
}
button:focus {
    outline: none;
    box-shadow: 0 0 0 2px var(--focus-ring);
}
button.textonly {
    background-color: transparent;
    /* color: var(--background-interactive); */
    /* border: solid 2px var(--background-interactive); */
}
button.textonly.delete {
    color: var(--delete-color);
}

input[type="checkbox"] {
    appearance: none;
    width: 4ex;
    min-height: 4ex;
    height: 100%;
    cursor: pointer;
    position: relative;
    margin: 0px;
}
input[type="checkbox"]::before {
    content: "check";
    font-family: "Material Symbols Outlined";
    font-variation-settings: 'FILL' 0,
        'wght' 100,
        'GRAD' 100,
        'opsz' 24;
    font-size: 24px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* transition: all 0.05s linear; */
    visibility: hidden;
}
input[type="checkbox"]:hover:not(:checked)::before {
    color: var(--text-low-priority);
    visibility: visible;
}
input[type="checkbox"]:checked::before {
    visibility: visible;
    font-variation-settings: 'FILL' 0,
        'wght' 350,
        'GRAD' 200,
        'opsz' 24;
}


html,
body {
    font-family: Arial, Helvetica, sans-serif;
    color: var(--text-normal);
    margin: 0;
}

div.app {
    height: 100vh;
    width: 100vw;
    display: grid;
    grid-template-rows: auto 1fr;
}
/* ... */

